fix : width flickering, add border

--- a/src/app/shared/components/device-list/device-list.component.scss
+++ b/src/app/shared/components/device-list/device-list.component.scss
@@ -1,5 +1,5 @@
 .key-input {
     height: auto;
     width: auto;
-    border: none;
+    padding: 0;
 }
